# sudoku-solver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test-and-lint.yml
src/: _grid.py  _types.py  solver.py  validator.py
src/sudoku_solver/: solver.py  validator.py
tests/: test_grid.py  test_solver.py  test_validator.py
