[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-solver"
version = "0.1.0"
description = "A Python library for solving and validating Sudoku puzzles."
authors = [
	{ name = "Suez Dirie", email = "suez.dirie@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src",
]
testpaths = [
    "tests",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2"
]
